--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Start Bootstrap</span>
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto  mb-2" src="assets/ft.jpg" alt="coming soon">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/ft.jpg" alt="coming soon">
         </span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -295,7 +295,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-mataelang-isat.png"
+                  src="./assets/snapshot-mataelang-isat.jpg"
                   alt="Project 1"
                   class="project-img"
                 />
@@ -321,7 +321,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-mataelang-h3i.png"
+                  src="./assets/snapshot-mataelang-h3i.jpg"
                   alt="Project 2"
                   class="project-img"
                 />
@@ -346,7 +346,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-pb-isat.png"
+                  src="./assets/snapshot-pb-isat.jpg"
                   alt="Project 3"
                   class="project-img"
                 />
@@ -371,7 +371,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-pb-h3i.png"
+                  src="./assets/snapshot-pb-h3i.jpg"
                   alt="Project 4"
                   class="project-img"
                 />
@@ -396,7 +396,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-lv2-isat.png"
+                  src="./assets/snapshot-lv2-isat.jpg"
                   alt="Project 5"
                   class="project-img"
                 />
@@ -421,7 +421,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-lv2-h3i.png"
+                  src="./assets/snapshot-lv2-h3i.jpg"
                   alt="Project 6"
                   class="project-img"
                 />
@@ -446,7 +446,7 @@
             <div class="details-container color-container">
               <div class="article-container">
                 <img
-                  src="./assets/snapshot-ximpaycreator.png"
+                  src="./assets/snapshot-ximpaycreator.jpg"
                   alt="Project 7"
                   class="project-img"
                 />
